--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -401,44 +402,50 @@
 
         <div class="row contact-info">
 
-          <div class="col-md-3">
-            <div class="contact-address">
-              <i class="bi bi-geo-alt" style="color: black; opacity: 0.8;"></i>
-              <h3 class="lang" key="adres1">юридический Адрес</h3>
-              <address class="lang duzetmeli" key="adres2">Türkmenistan, Balkan welaýaty,<br> Gumdag şäheriniň 15-nji ýaşaýyş jaýlar toplumynyň 88-njy jaýy</address>
-            </div>
-          </div>
-
-          <div class="col-md-3">
-            <div class="contact-address">
-              <i class="bi bi-geo-alt" style="color: black; opacity: 0.8;"></i>
-              <h3 class="lang" key="adres1">фактический адрес</h3>
-              <address class="lang duzetmeli" key="adres2">Türkmenistan, Balkan welaýaty, Türkmenbaşy şäheriniň Balkan köçesiniň 10-njy jaýy “Şagadam” söwda merkeziniň 31-nji otagy</address>
-            </div>
-          </div>
-
-          <div class="col-md-3">
-            <div class="contact-phone">
-              <i class="bi bi-phone" style="color: black; opacity: 0.8;"></i>
-              <h3 class="lang" key="phone_number">Номер телефона</h3>
-              <p><a href="tel:+99365369298">+99365369298</a></p>
-            </div>
-          </div>
-
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="contact-email">
               <i class="bi bi-envelope" style="color:black; opacity: 0.8;"></i>
               <h3 class="lang" key="email">Email</h3>
               <p><a href="mailto:zehinli.doganlar@mail.ru">zehinli.doganlar@mail.ru</a></p>
             </div>
           </div>
-
+          
+          <div class="col-md-4">
+            <div class="contact-phone">
+              <i class="bi bi-phone" style="color: black; opacity: 0.8;"></i>
+              <h3 class="lang" key="phone_number">Номер телефона</h3>
+              <p><a href="tel:+99365369298">+99365369298</a></p>
+            </div>
+          </div>
+          
+          <div class="col-md-4">
+            <div class="contact-address">
+              <i class="fa fa-fax" style="color: black; opacity: 0.8; font-size: 48px;"></i>
+              <h3 class="lang" key="phone_number">факс</h3>
+              <p><a href="tel:+99324325098">+99324325098</a></p>
+            </div>
+          </div>
         </div>
+
+        <div class="row contact-info">
+          <div class="col-md-6">
+            <div class="contact-address">
+              <i class="bi bi-geo-alt" style="color: black; opacity: 0.8;"></i>
+              <h3 class="lang" key="adres1">юридический Адрес</h3>
+              <address class="lang" key="adres2">Туркменистан, Балкан велаят, г.Гумдаг, <br> комплекса жилых домов 15, Дом 88.</address>
+            </div>
+          </div>      
+          <div class="col-md-6">
+            <div class="contact-address">
+              <i class="bi bi-geo-alt-fill" style="color: black; opacity: 0.8;"></i>
+              <h3 class="lang" key="adres1">фактический адрес</h3>
+              <address class="lang" key="adres2">Туркменистан, Балкан велаят, г.Туркменбаши, <br> торговый центр «Шагадам», кабинет №: 31</address>
+            </div>
+          </div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1864.5163118837922!2d52.99090282076264!3d39.99831365970386!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf2b867eb77205430!2z0KLQvtGA0LPQvtCy0YvQuSDRhtC10L3RgtGAICLQqNCQ0JPQkNCU0JDQnCI!5e1!3m2!1sen!2sus!4v1663226696131!5m2!1sen!2sus" width="600" height="450" style="border: 4px;;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </div>
       </div>
 
-      <!-- <div class="container mb-4">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22864.11283411948!2d-73.96468908098944!3d40.630720240038435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbg!4v1540447494452" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
-      </div> -->
+      <div class="container">
 
       <div class="karobka" data-aos="fade-right">
         <div class="container">
