--- a/services.html
+++ b/services.html
@@ -88,19 +88,16 @@
     <div class="container section-header" style="margin-bottom: 0px;" data-aos="fade-up">
       <div class="row">
         <div class="content">
-          <h2 class="lang text-center">«Зехинли доганлар» - надежный представитель в сфере охранных услуг</h2>
+          <h2 class="lang text-center">ЧОП «Зехинли доганлар» предлагает полный спектр разрешенных законом охранных и иных услуг в сфере безопасности и охраны.</h2>
           <p>Конкурентным преимуществом нашей компании являться широкий спектр услуг, включая услуги как физической, так и пультовой охраны. В связи с этим компания предоставляет следующие виды охранных услуг:</p>
-          <ul class="list-sogap">
-            <li>Невооруженная охрана дневная и ночная</li>
-            <li>Охрана вахтовым методом</li>
-            <li>Обеспечение внутри объектного и пропускного режимов</li>
-            <li>Сопровождение грузов и машина сопровождения</li>
-            <li>Монтаж системы объектовой охраны</li>
-            <li>Обслуживание системы объектовой охраны</li>
-          </ul>
+          <ol>
+            <li>Услуги физической охраны объектов  - комплекс мер, направленных на обеспечение безопасности функционирования объекта, сохранности его материального имущества, защиту жизни и здоровья его персонала. В задачу физической охраны входит контроль пропускного режима, досмотр автотранспорта, предотвращение краж и хищений, обход объекта и прилегающей территории, мониторинг системы видеонаблюдения, контроль действий посетителей и сотрудников предприятия, охрана материальных ценностей, находящихся в свободном доступе, принятие первичных мер по устранению технических аварий и возгораний, предотвращение несанкционированного доступа и повышение, и поддержание высокого статуса объекта/ предприятия.</li>
+            <li>Услуги пультовой охраны – это комплекс электронных систем, позволяющих обеспечивать безопасность объекта с помощью круглосуточной передачи данных, поступающих по защищенным каналам связи на пульт мониторингового центра. Современные системы охраны значительно уменьшают риски незаконного  проникновения на территорию, позволяют оперативно принять меры по расследованию происшествия, если оно все же произошло. Если на объекте произошла чрезвычайная ситуация, система мгновенно оповещает об этом охрану. К тревожным ситуациям относят попытку взлома, незаконного проникновения, кражу имущества и подобные деяния.</li>
+            <li>Услуги по сопровождению грузов - под сопровождением грузовых перевозок понимают не только непосредственное присутствие охраны на всем пути транспортировки, но и целый комплекс предварительной подготовки и превентивных мер безопасности. В услуги по сопровождению грузов входит подготовительный этап – оптимальный выбор транспорта для перевозки, правильная загрузка с соблюдением мер безопасности, оборудование транспорта аппаратурой слежения, разработка оптимального и максимально безопасного маршрута к пункту назначения с учетом особенностей местности и других важных нюансов, предварительная разведка территории на наличие опасных факторов, организация безопасных методов получения, отправки и выдачи груза, составление расписания остановок для отдыха, дозаправки с отметками медицинских, контрольно-пропускных пунктов, точный расчет времени прибытия груза, физическое сопровождения груза специальными агентами службы.</li>
+          </ol>
+          <p>Правильная организация перевозки ценных грузов при наличии охранного комплекса, гарантирует заказчику 100% целостность и сохранность груза.</p>
           <p>Мы адаптируем наши услуги под индивидуальные потребности каждого Заказчика. Обеспечиваем надежное сотрудничество на основе заключения официальных договоров  с гибким и лояльным ценообразованием.</p>
           
-
               <!-- TODO:  tablisa-->
           <table class="table table-responsive table-hover table-bordered border-primary">
           <thead >
