--- a/services.html
+++ b/services.html
@@ -88,7 +88,8 @@
     <div class="container section-header" style="margin-bottom: 0px;" data-aos="fade-up">
       <div class="row">
         <div class="content">
-          <h2 class="lang text-center">ЧОП «Зехинли доганлар» предлагает полный спектр разрешенных законом охранных и иных услуг в сфере безопасности и охраны.</h2>
+          <h2 class="lang text-center">услуги</h2>
+          <h3 class="lang text-center" style="font-weight: 600;">ЧОП «Зехинли доганлар» предлагает полный спектр разрешенных законом охранных и иных услуг в сфере безопасности и охраны.</h3>
           <p>Конкурентным преимуществом нашей компании являться широкий спектр услуг, включая услуги как физической, так и пультовой охраны. В связи с этим компания предоставляет следующие виды охранных услуг:</p>
           <ol>
             <li><span>Услуги физической охраны объектов</span>  - комплекс мер, направленных на обеспечение безопасности функционирования объекта, сохранности его материального имущества, защиту жизни и здоровья его персонала. В задачу физической охраны входит контроль пропускного режима, досмотр автотранспорта, предотвращение краж и хищений, обход объекта и прилегающей территории, мониторинг системы видеонаблюдения, контроль действий посетителей и сотрудников предприятия, охрана материальных ценностей, находящихся в свободном доступе, принятие первичных мер по устранению технических аварий и возгораний, предотвращение несанкционированного доступа и повышение, и поддержание высокого статуса объекта/ предприятия.</li>
