--- a/about.html
+++ b/about.html
@@ -160,7 +160,7 @@
                         <h3 class="lang header" key="about2"></h3>
                         <p>С целью диверсификации деятельности хозяйственного общества в 2020 году была налажена работа по техническому обслуживанию автомобилей и предоставления услуг по общественному питанию, а также в январе 2021 года был заключен контракт с Агентством Государственной рыбоохраны и контролю за водными биоресурсами Туркменистана по добыче рыбы и биоресурсов  на Туркменской части акватории Каспийского моря. Кроме этого предприятие держит торговые отношения с такими странами как ОАЭ, Китай, Турция, Россия, Азербайджан и Казахстан.</p>
                         <div class="balykcylyk container"><img class="img-fluid" src="images/autoservice/fdf.jpg" alt=""><h5 class="aciklama text-center" >АВТОСЕРВИС</h5></div>
-                        <div class="balykcylyk container"><img class="img-fluid" src="images/fishing/wild-files-marine-debris-removal.jpg" alt=""><h5 class="aciklama text-center">рыболовство</h5></div>
+                        <!-- <div class="balykcylyk container"><img class="img-fluid" src="images/fishing/wild-files-marine-debris-removal.jpg" alt=""><h5 class="aciklama text-center">рыболовство</h5></div> -->
                       </div>
                   </div>
                 </div>
@@ -180,7 +180,7 @@
           <div class="swiper-wrapper align-items-center">
             <div class="swiper-slide"><img src="images/clients/adal sut.jpg" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="images/clients/alkar-insaat-1.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="images/clients/bend-general-trading.png" class="img-fluid" alt=""></div>
+            <!-- <div class="swiper-slide"><img src="images/clients/bend-general-trading.png" class="img-fluid" alt=""></div> -->
             <div class="swiper-slide"><img src="images/clients/JINSHI.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="images/clients/kayalarkimya.JPG" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="images/clients/overseasfze.com.png" class="img-fluid" alt=""></div>
