--- a/about.html
+++ b/about.html
@@ -201,7 +201,7 @@
                       <h2 class="lang text-center">БЛАГОТВОРИТЕЛЬНОСТЬ</h2>
                         <h3 class="lang header text-center" key="about2" style="font:28px; font-weight: bold;">«Добрые дела дают силы нам самим и побуждают к добрым поступкам других»</h3>
                           <div class="row mb-3 mt-5">
-                            <img class="img-fluid col-lg-3" src="images/ToreAhunMetjidi.jpg" alt="Töre Ahun Metjidi">
+                            <img class="img-fluid col-3" src="images/ToreAhunMetjidi.jpg" alt="Töre Ahun Metjidi">
                             <P class="col-9 text-end">Хозяйственное общество «Зехинли доганлар» начиная с 2019 года занимается благотворительной деятельностью. Первый шаг был сделан в апреле 2019 года путем внесения денежных средств на строительство главной мечети Балканского велаята в городе Балканабат.</P>
                           </div>
                           <!-- <P id="abzas">Так же до сегодняшнего дня была оказана материальная помощь</P> -->
@@ -219,12 +219,14 @@
                               <p class="col-10 text-end">Для улучшения условий содержания детей инвалидов и организации поездок по святым местам, а также отдыха в оздоровительных центрах нами была оказана финансовая поддержка Общества слепых и глухих  в г. Балканабат  Балканского велаята.</p>
                             </div>
                             <div class="row mb-3 mt-5">
-                              <div class="col-2"><a target="_blank" href="images/minnetdarlyk/Etrek muzeyi.jpg"><img style="width:100%" src="images/minnetdarlyk/Etrek muzeyi.jpg" alt="Minnetdarlyk haty"></a></div>
-                              <p class="col-10 text-end">Нами была проведена финансовая поддержка Предпринимателя Х. Годанова, который по просьбе местного населения создал историко-краеведческого музей в г. Этрек Этрекского этрапа Балканского велаята.</p>
+                              <div class="img-fluid col-4 flyer2"><img class="ramka" src="images/minnetdarlyk/muzeyin surady2.jpg" style="height: 88%;" alt="FLYER"></div>
+                              <div class="img-fluid col-2 flyer_near2"><a target="_blank" href="images/minnetdarlyk/Etrek muzeyi.jpg"><img style="width:100%" src="images/minnetdarlyk/Etrek muzeyi.jpg" alt="Minnetdarlyk haty"></a></div>
+                              <p class="col-6 text-end">Нами была проведена финансовая поддержка Предпринимателя Х. Годанова, который по просьбе местного населения создал историко-краеведческого музей в г. Этрек Этрекского этрапа Балканского велаята.</p>
                             </div>
                             <div class="row mb-3 mt-5">
-                              <div class="col-2"><img style="width:100%; opacity: 0.2;" src="images/minnetdarlyk/Etrek muzeyi.jpg" alt="Minnetdarlyk haty"></a></div>
-                              <p class="col-10 text-end">В связи с проведением дня инвалидов и людей с ограниченными возможностями, а так же содействие в улучшении оказываемых услуг со стороны Общества Инвалидов Туркменистана нами была предоставлена финансовая помощь.</p>
+                              <div class="img-fluid col-2 flyer3"><img class="ramka" src="images/minnetdarlyk/10-15.webp" style="width:92%; height: auto;" alt="FLYER"></div>
+                              <div class="img-fluid col-2 flyer_near3"><a target="_blank" href="images/minnetdarlyk/minnetdarlyk2 copy.webp"><img class="ramka" style="width:100%" src="images/minnetdarlyk/minnetdarlyk2 copy.webp" alt="Minnetdarlyk haty"></a></div>
+                              <p class="col-8 text-end">В связи с проведением дня инвалидов и людей с ограниченными возможностями, а так же содействие в улучшении оказываемых услуг со стороны Общества Инвалидов Туркменистана нами была предоставлена финансовая помощь.</p>
                             </div>       
 
                             <p class="text-lg-center" style="font-weight: bolder; font-size: 1.6rem;">Хозяйственное общество «Зехинли доганлар» планирует продолжить благотворительную деятельность, так как лучший способ сохранить память о добрых делах-повторять их.</p>
