--- a/about.html
+++ b/about.html
@@ -179,6 +179,7 @@
         <div class="clients-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper align-items-center">
             <div class="swiper-slide"><img src="images/clients/adal sut.jpg" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="images/clients/HYUNDAI ENGINEERING.jpg" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="images/clients/alkar-insaat-1.png" class="img-fluid" alt=""></div>
             <!-- <div class="swiper-slide"><img src="images/clients/bend-general-trading.png" class="img-fluid" alt=""></div> -->
             <div class="swiper-slide"><img src="images/clients/JINSHI.png" class="img-fluid" alt=""></div>
@@ -193,6 +194,7 @@
     </section><!-- End Clients Section -->
 
     
+
               <!-- ======= TODO: БЛАГОТВОРИТЕЛЬНОСТЬ ======= -->
               <section id="about" style="padding-top: 50px;">
                 <div class="container section-header" style="margin-bottom: 0px;" data-aos="fade-up">
