--- a/gallery.html
+++ b/gallery.html
@@ -87,26 +87,32 @@
       <div class="container-fluid">
         <div class="gallery">
           <div class="setir" data-aos="fade-up">
-            <img src="images/gallery/5.webp" alt="">
-            <img src="images/gallery/6.webp" alt="">
-            <img src="images/gallery/pickup.webp" alt="">
+            <div class="gallery__card">
+              <img src="images/gallery/5.webp" alt="barlag">
+              <div class="gallery__text">Barlag gecirme ishleri</div>
+            </div>
+            <div class="gallery__card"><img src="images/gallery/6.webp" alt="">
+            <div class="gallery__text">Men ustunde ishlap otyn hazir NURY AGA</div>
+            </div>
+            <div class="gallery__card"><img src="images/gallery/pickup.webp" alt=""></div>
             <!-- <img src="images/gallery/2.webp" alt=""> -->
           </div>
           <div class="setir" data-aos="fade-up">
-            <img src="images/gallery/1.webp" alt="">
-            <img src="images/gallery/8.webp" alt="">
-            <img src="images/gallery/4.1.webp" alt="">
+            <div class="gallery__card"><img src="images/gallery/1.webp" alt=""></div>
+            <div class="gallery__card"><img src="images/gallery/8.webp" alt=""></div>
+            <div class="gallery__card"><img src="images/gallery/4.1.webp" alt=""></div>
             
           </div>
           <div class="setir" data-aos="fade-down">
-            <img src="images/gallery/3.webp" alt="">
-            <img src="images/gallery/7.webp" alt="">
+            <div class="gallery__card"><img src="images/gallery/3.webp" alt=""></div>
+            <div class="gallery__card"><img src="images/gallery/7.webp" alt=""></div>
             
           </div>
         </div>
-        <div class="gallery" data-aos="fade-left">
-          <img src="images/gallery/12.webp" alt="">
-        </div>
+
+          <div class="gallery" data-aos="fade-left">
+            <div class="gallery__card"><img src="images/gallery/12.webp" alt=""></div>
+          </div>
       </div>
 
 
