--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <div class="hero-slider swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide" style="background-image: url('images/hero-carousel/1.webp');"></div>
-        <!-- <div class="swiper-slide" style="background-image: url('images/hero-carousel/2-2.webp');"></div> -->
+        <div class="swiper-slide" style="background-image: url('images/hero-carousel/4-1.jpg');"></div>
         <div class="swiper-slide" style="background-image: url('images/hero-carousel/3.webp');"></div>
         <!-- <div class="swiper-slide" style="background-image: url('');"></div> -->
         <!-- <div class="swiper-slide" style="background-image: url('');"></div> -->
@@ -427,14 +427,14 @@
             <div class="contact-address">
               <i class="bi bi-geo-alt" style="color: black; opacity: 0.8;"></i>
               <h3 class="lang" key="adres1">юридический Адрес</h3>
-              <address class="lang" key="adres2">Туркменистан, Балкан велаят, г.Гумдаг, <br> комплекса жилых домов 15, Дом 88.</address>
+              <address class="lang" key="adres2">POSTAL CODE????, Туркменистан, Балкан велаят, г.Гумдаг, <br> комплекса жилых домов 15, Дом 88.</address>
             </div>
           </div>      
           <div class="col-md-6">
             <div class="contact-address">
               <i class="bi bi-geo-alt-fill" style="color: black; opacity: 0.8;"></i>
               <h3 class="lang" key="adres1">фактический адрес</h3>
-              <address class="lang" key="adres2">Туркменистан, Балкан велаят, г.Туркменбаши, <br> торговый центр «Шагадам», кабинет №: 31</address>
+              <address class="lang" key="adres2">745000, Туркменистан, Балкан велаят, г.Туркменбаши, <br> торговый центр «Шагадам», кабинет №: 31</address>
             </div>
           </div>
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1864.5163118837922!2d52.99090282076264!3d39.99831365970386!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf2b867eb77205430!2z0KLQvtGA0LPQvtCy0YvQuSDRhtC10L3RgtGAICLQqNCQ0JPQkNCU0JDQnCI!5e1!3m2!1sen!2sus!4v1663226696131!5m2!1sen!2sus" width="600" height="450" style="border: 4px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </div>
